package business.system.user;

public class Admin extends Role {
    public static final String ADMIN = "Admin";

    public Admin() {
        this.setNameRole(Admin.ADMIN);
    }


}
